--- a/1947/core/templates/core/formal.html
+++ b/1947/core/templates/core/formal.html
@@ -5,6 +5,8 @@
 {% block content %}
     <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
         <h2 class="mb-12 text-2xl text-center">My items</h2>
+        <div>
+        <h1 style="display:flex; align;center;">Category: {{ category_name }}</h1>
 
         <div class="grid grid-cols-3 gap-3">
             {% for item in items %}
@@ -17,16 +19,12 @@
                         <div class="p-6 bg-white rounded-b-xl">
                             <h2 class="text-2xl">{{ item.name }}</h2>
                             <p class="text-gray-500">Price: {{ item.price }}</p>
-
-
-                            <a href="{% url 'item:edit' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl">Edit</a>
-                            <a href="{% url 'item:delete' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl">Delete</a>
                         </div>
                     </a>
-
                 </div>
-
             {% endfor %}
+        </div>
+
         </div>
     </div>
 {% endblock %}
