Added Cart functionalities Successfully

--- a/1947/item/templates/item/detail.html
+++ b/1947/item/templates/item/detail.html
@@ -10,9 +10,12 @@
     </div>
 
     <div class="col-span-3 p-6 bg-gray-100 rounded-xl">
-        <h1 class="mb-6 text-3xl">{{ item.name }}</h1>
-        <p class="text-gray-500"><strong>Price: </strong>{{ item.price }}</p>
-        <p class="text-gray-500"><strong>Seller: </strong>{{ item.created_by.username }}</p>
+        <div>
+            <h1 class="mb-6 text-3xl">{{ item.name }}</h1>
+            <p class="text-gray-500"><strong>Price: </strong>{{ item.price }}</p>
+            <p class="text-gray-500"><strong>Seller: </strong>{{ item.created_by.username }}</p>
+            <a href="{% url 'cart:add_to_cart' item.id %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700 mt-8">Add To Cart</a>
+        </div>
         {% if item.description %}
             <p class="text-gray-700">
                 <strong class="text-gray-500">Description:</strong><br>
