first i added a visit count (weekly), then the total product count viewing section , then also added Discount price section in items

--- a/1947/item/templates/item/detail.html
+++ b/1947/item/templates/item/detail.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+{% comment %} <h1>{{ item.name }}</h1> {% endcomment %}
+
 <div class="grid grid-cols-6 gap-6 product">
     <div class="col-span-3">
         <img src="{{ item.image.url }}" class="rounded-xl">
