--- a/1947/core/templates/core/index.html
+++ b/1947/core/templates/core/index.html
@@ -3,6 +3,35 @@
 {% block title %}Welcome{% endblock %}
 
 {% block content %}
+    <style>
+        .badge {
+            --bs-badge-padding-x: 0.65em;
+            --bs-badge-padding-y: 0.35em;
+            --bs-badge-font-size: 0.75em;
+            --bs-badge-font-weight: 700;
+            --bs-badge-color: #fff;
+            --bs-badge-border-radius: 0.375rem;
+            display: inline-block;
+            padding: var(--bs-badge-padding-y) var(--bs-badge-padding-x);
+            font-size: var(--bs-badge-font-size);
+            font-weight: var(--bs-badge-font-weight);
+            line-height: 1;
+            color: var(--bs-badge-color);
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: baseline;
+            border-radius: var(--bs-badge-border-radius);
+          }
+          .badge:empty {
+            display: none;
+          }
+          
+          .btn .badge {
+            position: relative;
+            top: -1px;
+          }          
+    </style>
+
 
     {% comment %} <div><i class="fa fa-eye" aria-hidden="true"></i> | {{ visit_count }}</div> {% endcomment %}
     <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
@@ -12,15 +41,36 @@
         <div class="bg-gray-200">
             <div class="mx-auto max-w-7xl px-4 py-16 sm:px-6 sm:py-24 lg:px-8">
                 <div class="grid grid-cols-3 gap-5 rounded-2xl">
+                    
+                    
                     {% for item in items %}
+                    {% comment %} # adding discount {% endcomment %}
+                        {% if item.is_discount %}      
                         <a href="{% url 'item:detail' item.id %}" class="group" >
+
                             <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-xl bg-gray-400" style="height: 400px;">
                                 <img src="{{ item.image.url }}" alt="{{ item.name }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
                             </div>
-                            <h3 class="mt-4 text-sm text-gray-700">{{ item.name }}</h3>
-                            <p class="mt-1 text-lg font-medium text-gray-900">{{ item.price }}</p>
+                            <div>
+                                <h3 class="mt-4 text-sm text-gray-700">{{ item.name }}</h3>
+                                <span><div class="badge bg-teal-500 text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Discount</div></span>
+                                <p class="mt-1 text-lg font-medium text-gray-900">INR : <strike>{{ item.price }}</strike> | {{ item.sale_price }}</p>
+                            </div>
                         </a>
+                        {% else %}
+                            <a href="{% url 'item:detail' item.id %}" class="group" >
+
+                                <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-xl bg-gray-400" style="height: 400px;">
+                                    <img src="{{ item.image.url }}" alt="{{ item.name }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                                </div>
+                                <div>
+                                    <h3 class="mt-4 text-sm text-gray-700">{{ item.name }}</h3>
+                                    <p class="mt-1 text-lg font-medium text-gray-900">INR : {{ item.price }}</p>
+                                </div>
+                            </a>
+                        {% endif %}
                     {% endfor %}
+                    
                 </div>
             </div>
         </div>
